y.output
Terminals unused in grammar

   COMMA
   LBRACE
   RBRACE
   DOT


Grammar

    0 $accept: program $end

    1 program: exp

    2 exp: INT
    3    | STRING
    4    | lvalue
    5    | LPAREN expseq RPAREN
    6    | MINUS exp
    7    | IF exp THEN exp
    8    | IF exp THEN exp ELSE exp
    9    | WHILE exp DO exp
   10    | FOR id ASSIGN exp TO exp DO exp
   11    | LET decs IN expseq END
   12    | id LBRACK exp RBRACK OF exp
   13    | exp TIMES exp
   14    | exp DIVIDE exp
   15    | exp PLUS exp
   16    | exp MINUS exp
   17    | exp EQ exp
   18    | exp NEQ exp
   19    | exp LT exp
   20    | exp LE exp
   21    | exp GT exp
   22    | exp GE exp
   23    | exp AND exp
   24    | exp OR exp
   25    | lvalue ASSIGN exp

   26 id: ID

   27 lvalue: id lvalue_ext

   28 lvalue_ext: %empty
   29           | LBRACK exp RBRACK lvalue_ext

   30 expseq: %empty
   31       | expseq1

   32 expseq1: exp
   33        | exp SEMICOLON expseq1

   34 decs: %empty
   35     | typedec decs
   36     | vardec decs

   37 vardec: VAR id ASSIGN exp
   38       | VAR id COLON id ASSIGN exp

   39 typedec: TYPE id EQ ty

   40 ty: ARRAY OF id


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 26
INT (259) 2
STRING (260) 3
COMMA (261)
COLON (262) 38
SEMICOLON (263) 33
LPAREN (264) 5
RPAREN (265) 5
LBRACK (266) 12 29
RBRACK (267) 12 29
LBRACE (268)
RBRACE (269)
DOT (270)
PLUS (271) 15
MINUS (272) 6 16
TIMES (273) 13
DIVIDE (274) 14
EQ (275) 17 39
NEQ (276) 18
LT (277) 19
LE (278) 20
GT (279) 21
GE (280) 22
AND (281) 23
OR (282) 24
ASSIGN (283) 10 25 37 38
ARRAY (284) 40
IF (285) 7 8
THEN (286) 7 8
ELSE (287) 8
WHILE (288) 9
FOR (289) 10
TO (290) 10
DO (291) 9 10
LET (292) 11
IN (293) 11
END (294) 11
OF (295) 12 40
VAR (296) 37 38
TYPE (297) 39


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
program (44)
    on left: 1, on right: 0
exp (45)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
    23 24 25, on right: 1 6 7 8 9 10 12 13 14 15 16 17 18 19 20 21
    22 23 24 25 29 32 33 37 38
id (46)
    on left: 26, on right: 10 12 27 37 38 39 40
lvalue (47)
    on left: 27, on right: 4 25
lvalue_ext (48)
    on left: 28 29, on right: 27 29
expseq (49)
    on left: 30 31, on right: 5 11
expseq1 (50)
    on left: 32 33, on right: 31 33
decs (51)
    on left: 34 35 36, on right: 11 35 36
vardec (52)
    on left: 37 38, on right: 36
typedec (53)
    on left: 39, on right: 35
ty (54)
    on left: 40, on right: 39


State 0

    0 $accept: . program $end

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    STRING  shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9

    program  go to state 10
    exp      go to state 11
    id       go to state 12
    lvalue   go to state 13


State 1

   26 id: ID .

    $default  reduce using rule 26 (id)


State 2

    2 exp: INT .

    $default  reduce using rule 2 (exp)


State 3

    3 exp: STRING .

    $default  reduce using rule 3 (exp)


State 4

    5 exp: LPAREN . expseq RPAREN

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    STRING  shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9

    $default  reduce using rule 30 (expseq)

    exp      go to state 14
    id       go to state 12
    lvalue   go to state 13
    expseq   go to state 15
    expseq1  go to state 16


State 5

    6 exp: MINUS . exp

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    STRING  shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9

    exp     go to state 17
    id      go to state 12
    lvalue  go to state 13


State 6

    7 exp: IF . exp THEN exp
    8    | IF . exp THEN exp ELSE exp

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    STRING  shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9

    exp     go to state 18
    id      go to state 12
    lvalue  go to state 13


State 7

    9 exp: WHILE . exp DO exp

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    STRING  shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9

    exp     go to state 19
    id      go to state 12
    lvalue  go to state 13


State 8

   10 exp: FOR . id ASSIGN exp TO exp DO exp

    ID  shift, and go to state 1

    id  go to state 20


State 9

   11 exp: LET . decs IN expseq END

    VAR   shift, and go to state 21
    TYPE  shift, and go to state 22

    $default  reduce using rule 34 (decs)

    decs     go to state 23
    vardec   go to state 24
    typedec  go to state 25


State 10

    0 $accept: program . $end

    $end  shift, and go to state 26


State 11

    1 program: exp .
   13 exp: exp . TIMES exp
   14    | exp . DIVIDE exp
   15    | exp . PLUS exp
   16    | exp . MINUS exp
   17    | exp . EQ exp
   18    | exp . NEQ exp
   19    | exp . LT exp
   20    | exp . LE exp
   21    | exp . GT exp
   22    | exp . GE exp
   23    | exp . AND exp
   24    | exp . OR exp

    PLUS    shift, and go to state 27
    MINUS   shift, and go to state 28
    TIMES   shift, and go to state 29
    DIVIDE  shift, and go to state 30
    EQ      shift, and go to state 31
    NEQ     shift, and go to state 32
    LT      shift, and go to state 33
    LE      shift, and go to state 34
    GT      shift, and go to state 35
    GE      shift, and go to state 36
    AND     shift, and go to state 37
    OR      shift, and go to state 38

    $default  reduce using rule 1 (program)


State 12

   12 exp: id . LBRACK exp RBRACK OF exp
   27 lvalue: id . lvalue_ext

    LBRACK  shift, and go to state 39

    $default  reduce using rule 28 (lvalue_ext)

    lvalue_ext  go to state 40


State 13

    4 exp: lvalue .
   25    | lvalue . ASSIGN exp

    ASSIGN  shift, and go to state 41

    $default  reduce using rule 4 (exp)


State 14

   13 exp: exp . TIMES exp
   14    | exp . DIVIDE exp
   15    | exp . PLUS exp
   16    | exp . MINUS exp
   17    | exp . EQ exp
   18    | exp . NEQ exp
   19    | exp . LT exp
   20    | exp . LE exp
   21    | exp . GT exp
   22    | exp . GE exp
   23    | exp . AND exp
   24    | exp . OR exp
   32 expseq1: exp .
   33        | exp . SEMICOLON expseq1

    SEMICOLON  shift, and go to state 42
    PLUS       shift, and go to state 27
    MINUS      shift, and go to state 28
    TIMES      shift, and go to state 29
    DIVIDE     shift, and go to state 30
    EQ         shift, and go to state 31
    NEQ        shift, and go to state 32
    LT         shift, and go to state 33
    LE         shift, and go to state 34
    GT         shift, and go to state 35
    GE         shift, and go to state 36
    AND        shift, and go to state 37
    OR         shift, and go to state 38

    $default  reduce using rule 32 (expseq1)


State 15

    5 exp: LPAREN expseq . RPAREN

    RPAREN  shift, and go to state 43


State 16

   31 expseq: expseq1 .

    $default  reduce using rule 31 (expseq)


State 17

    6 exp: MINUS exp .
   13    | exp . TIMES exp
   14    | exp . DIVIDE exp
   15    | exp . PLUS exp
   16    | exp . MINUS exp
   17    | exp . EQ exp
   18    | exp . NEQ exp
   19    | exp . LT exp
   20    | exp . LE exp
   21    | exp . GT exp
   22    | exp . GE exp
   23    | exp . AND exp
   24    | exp . OR exp

    TIMES   shift, and go to state 29
    DIVIDE  shift, and go to state 30

    $default  reduce using rule 6 (exp)


State 18

    7 exp: IF exp . THEN exp
    8    | IF exp . THEN exp ELSE exp
   13    | exp . TIMES exp
   14    | exp . DIVIDE exp
   15    | exp . PLUS exp
   16    | exp . MINUS exp
   17    | exp . EQ exp
   18    | exp . NEQ exp
   19    | exp . LT exp
   20    | exp . LE exp
   21    | exp . GT exp
   22    | exp . GE exp
   23    | exp . AND exp
   24    | exp . OR exp

    PLUS    shift, and go to state 27
    MINUS   shift, and go to state 28
    TIMES   shift, and go to state 29
    DIVIDE  shift, and go to state 30
    EQ      shift, and go to state 31
    NEQ     shift, and go to state 32
    LT      shift, and go to state 33
    LE      shift, and go to state 34
    GT      shift, and go to state 35
    GE      shift, and go to state 36
    AND     shift, and go to state 37
    OR      shift, and go to state 38
    THEN    shift, and go to state 44


State 19

    9 exp: WHILE exp . DO exp
   13    | exp . TIMES exp
   14    | exp . DIVIDE exp
   15    | exp . PLUS exp
   16    | exp . MINUS exp
   17    | exp . EQ exp
   18    | exp . NEQ exp
   19    | exp . LT exp
   20    | exp . LE exp
   21    | exp . GT exp
   22    | exp . GE exp
   23    | exp . AND exp
   24    | exp . OR exp

    PLUS    shift, and go to state 27
    MINUS   shift, and go to state 28
    TIMES   shift, and go to state 29
    DIVIDE  shift, and go to state 30
    EQ      shift, and go to state 31
    NEQ     shift, and go to state 32
    LT      shift, and go to state 33
    LE      shift, and go to state 34
    GT      shift, and go to state 35
    GE      shift, and go to state 36
    AND     shift, and go to state 37
    OR      shift, and go to state 38
    DO      shift, and go to state 45


State 20

   10 exp: FOR id . ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 46


State 21

   37 vardec: VAR . id ASSIGN exp
   38       | VAR . id COLON id ASSIGN exp

    ID  shift, and go to state 1

    id  go to state 47


State 22

   39 typedec: TYPE . id EQ ty

    ID  shift, and go to state 1

    id  go to state 48


State 23

   11 exp: LET decs . IN expseq END

    IN  shift, and go to state 49


State 24

   36 decs: vardec . decs

    VAR   shift, and go to state 21
    TYPE  shift, and go to state 22

    $default  reduce using rule 34 (decs)

    decs     go to state 50
    vardec   go to state 24
    typedec  go to state 25


State 25

   35 decs: typedec . decs

    VAR   shift, and go to state 21
    TYPE  shift, and go to state 22

    $default  reduce using rule 34 (decs)

    decs     go to state 51
    vardec   go to state 24
    typedec  go to state 25


State 26

    0 $accept: program $end .

    $default  accept


State 27

   15 exp: exp PLUS . exp

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    STRING  shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9

    exp     go to state 52
    id      go to state 12
    lvalue  go to state 13


State 28

   16 exp: exp MINUS . exp

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    STRING  shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9

    exp     go to state 53
    id      go to state 12
    lvalue  go to state 13


State 29

   13 exp: exp TIMES . exp

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    STRING  shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9

    exp     go to state 54
    id      go to state 12
    lvalue  go to state 13


State 30

   14 exp: exp DIVIDE . exp

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    STRING  shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9

    exp     go to state 55
    id      go to state 12
    lvalue  go to state 13


State 31

   17 exp: exp EQ . exp

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    STRING  shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9

    exp     go to state 56
    id      go to state 12
    lvalue  go to state 13


State 32

   18 exp: exp NEQ . exp

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    STRING  shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9

    exp     go to state 57
    id      go to state 12
    lvalue  go to state 13


State 33

   19 exp: exp LT . exp

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    STRING  shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9

    exp     go to state 58
    id      go to state 12
    lvalue  go to state 13


State 34

   20 exp: exp LE . exp

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    STRING  shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9

    exp     go to state 59
    id      go to state 12
    lvalue  go to state 13


State 35

   21 exp: exp GT . exp

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    STRING  shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9

    exp     go to state 60
    id      go to state 12
    lvalue  go to state 13


State 36

   22 exp: exp GE . exp

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    STRING  shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9

    exp     go to state 61
    id      go to state 12
    lvalue  go to state 13


State 37

   23 exp: exp AND . exp

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    STRING  shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9

    exp     go to state 62
    id      go to state 12
    lvalue  go to state 13


State 38

   24 exp: exp OR . exp

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    STRING  shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9

    exp     go to state 63
    id      go to state 12
    lvalue  go to state 13


State 39

   12 exp: id LBRACK . exp RBRACK OF exp
   29 lvalue_ext: LBRACK . exp RBRACK lvalue_ext

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    STRING  shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9

    exp     go to state 64
    id      go to state 12
    lvalue  go to state 13


State 40

   27 lvalue: id lvalue_ext .

    $default  reduce using rule 27 (lvalue)


State 41

   25 exp: lvalue ASSIGN . exp

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    STRING  shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9

    exp     go to state 65
    id      go to state 12
    lvalue  go to state 13


State 42

   33 expseq1: exp SEMICOLON . expseq1

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    STRING  shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9

    exp      go to state 14
    id       go to state 12
    lvalue   go to state 13
    expseq1  go to state 66


State 43

    5 exp: LPAREN expseq RPAREN .

    $default  reduce using rule 5 (exp)


State 44

    7 exp: IF exp THEN . exp
    8    | IF exp THEN . exp ELSE exp

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    STRING  shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9

    exp     go to state 67
    id      go to state 12
    lvalue  go to state 13


State 45

    9 exp: WHILE exp DO . exp

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    STRING  shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9

    exp     go to state 68
    id      go to state 12
    lvalue  go to state 13


State 46

   10 exp: FOR id ASSIGN . exp TO exp DO exp

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    STRING  shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9

    exp     go to state 69
    id      go to state 12
    lvalue  go to state 13


State 47

   37 vardec: VAR id . ASSIGN exp
   38       | VAR id . COLON id ASSIGN exp

    COLON   shift, and go to state 70
    ASSIGN  shift, and go to state 71


State 48

   39 typedec: TYPE id . EQ ty

    EQ  shift, and go to state 72


State 49

   11 exp: LET decs IN . expseq END

    ID      shift, and go to state 1
    INT     shift, and go to state 2
    STRING  shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9

    $default  reduce using rule 30 (expseq)

    exp      go to state 14
    id       go to state 12
    lvalue   go to state 13
    expseq   go to state 73
    expseq1  go to state 16


State 50

   36 decs: vardec decs .

    $default  reduce using rule 36 (decs)


State 51

   35 decs: typedec decs .

    $default  reduce using rule 35 (decs)


State 52

   13 exp: exp . TIMES exp
   14    | exp . DIVIDE exp
   15    | exp . PLUS exp
   15    | exp PLUS exp .
   16    | exp . MINUS exp
   17    | exp . EQ exp
   18    | exp . NEQ exp
   19    | exp . LT exp
   20    | exp . LE exp
   21    | exp . GT exp
   22    | exp . GE exp
   23    | exp . AND exp
   24    | exp . OR exp

    TIMES   shift, and go to state 29
    DIVIDE  shift, and go to state 30

    $default  reduce using rule 15 (exp)


State 53

   13 exp: exp . TIMES exp
   14    | exp . DIVIDE exp
   15    | exp . PLUS exp
   16    | exp . MINUS exp
   16    | exp MINUS exp .
   17    | exp . EQ exp
   18    | exp . NEQ exp
   19    | exp . LT exp
   20    | exp . LE exp
   21    | exp . GT exp
   22    | exp . GE exp
   23    | exp . AND exp
   24    | exp . OR exp

    TIMES   shift, and go to state 29
    DIVIDE  shift, and go to state 30

    $default  reduce using rule 16 (exp)


State 54

   13 exp: exp . TIMES exp
   13    | exp TIMES exp .
   14    | exp . DIVIDE exp
   15    | exp . PLUS exp
   16    | exp . MINUS exp
   17    | exp . EQ exp
   18    | exp . NEQ exp
   19    | exp . LT exp
   20    | exp . LE exp
   21    | exp . GT exp
   22    | exp . GE exp
   23    | exp . AND exp
   24    | exp . OR exp

    $default  reduce using rule 13 (exp)


State 55

   13 exp: exp . TIMES exp
   14    | exp . DIVIDE exp
   14    | exp DIVIDE exp .
   15    | exp . PLUS exp
   16    | exp . MINUS exp
   17    | exp . EQ exp
   18    | exp . NEQ exp
   19    | exp . LT exp
   20    | exp . LE exp
   21    | exp . GT exp
   22    | exp . GE exp
   23    | exp . AND exp
   24    | exp . OR exp

    $default  reduce using rule 14 (exp)


State 56

   13 exp: exp . TIMES exp
   14    | exp . DIVIDE exp
   15    | exp . PLUS exp
   16    | exp . MINUS exp
   17    | exp . EQ exp
   17    | exp EQ exp .
   18    | exp . NEQ exp
   19    | exp . LT exp
   20    | exp . LE exp
   21    | exp . GT exp
   22    | exp . GE exp
   23    | exp . AND exp
   24    | exp . OR exp

    PLUS    shift, and go to state 27
    MINUS   shift, and go to state 28
    TIMES   shift, and go to state 29
    DIVIDE  shift, and go to state 30

    EQ   error (nonassociative)
    NEQ  error (nonassociative)
    LT   error (nonassociative)
    LE   error (nonassociative)
    GT   error (nonassociative)
    GE   error (nonassociative)

    $default  reduce using rule 17 (exp)


State 57

   13 exp: exp . TIMES exp
   14    | exp . DIVIDE exp
   15    | exp . PLUS exp
   16    | exp . MINUS exp
   17    | exp . EQ exp
   18    | exp . NEQ exp
   18    | exp NEQ exp .
   19    | exp . LT exp
   20    | exp . LE exp
   21    | exp . GT exp
   22    | exp . GE exp
   23    | exp . AND exp
   24    | exp . OR exp

    PLUS    shift, and go to state 27
    MINUS   shift, and go to state 28
    TIMES   shift, and go to state 29
    DIVIDE  shift, and go to state 30

    EQ   error (nonassociative)
    NEQ  error (nonassociative)
    LT   error (nonassociative)
    LE   error (nonassociative)
    GT   error (nonassociative)
    GE   error (nonassociative)

    $default  reduce using rule 18 (exp)


State 58

   13 exp: exp . TIMES exp
   14    | exp . DIVIDE exp
   15    | exp . PLUS exp
   16    | exp . MINUS exp
   17    | exp . EQ exp
   18    | exp . NEQ exp
   19    | exp . LT exp
   19    | exp LT exp .
   20    | exp . LE exp
   21    | exp . GT exp
   22    | exp . GE exp
   23    | exp . AND exp
   24    | exp . OR exp

    PLUS    shift, and go to state 27
    MINUS   shift, and go to state 28
    TIMES   shift, and go to state 29
    DIVIDE  shift, and go to state 30

    EQ   error (nonassociative)
    NEQ  error (nonassociative)
    LT   error (nonassociative)
    LE   error (nonassociative)
    GT   error (nonassociative)
    GE   error (nonassociative)

    $default  reduce using rule 19 (exp)


State 59

   13 exp: exp . TIMES exp
   14    | exp . DIVIDE exp
   15    | exp . PLUS exp
   16    | exp . MINUS exp
   17    | exp . EQ exp
   18    | exp . NEQ exp
   19    | exp . LT exp
   20    | exp . LE exp
   20    | exp LE exp .
   21    | exp . GT exp
   22    | exp . GE exp
   23    | exp . AND exp
   24    | exp . OR exp

    PLUS    shift, and go to state 27
    MINUS   shift, and go to state 28
    TIMES   shift, and go to state 29
    DIVIDE  shift, and go to state 30

    EQ   error (nonassociative)
    NEQ  error (nonassociative)
    LT   error (nonassociative)
    LE   error (nonassociative)
    GT   error (nonassociative)
    GE   error (nonassociative)

    $default  reduce using rule 20 (exp)


State 60

   13 exp: exp . TIMES exp
   14    | exp . DIVIDE exp
   15    | exp . PLUS exp
   16    | exp . MINUS exp
   17    | exp . EQ exp
   18    | exp . NEQ exp
   19    | exp . LT exp
   20    | exp . LE exp
   21    | exp . GT exp
   21    | exp GT exp .
   22    | exp . GE exp
   23    | exp . AND exp
   24    | exp . OR exp

    PLUS    shift, and go to state 27
    MINUS   shift, and go to state 28
    TIMES   shift, and go to state 29
    DIVIDE  shift, and go to state 30

    EQ   error (nonassociative)
    NEQ  error (nonassociative)
    LT   error (nonassociative)
    LE   error (nonassociative)
    GT   error (nonassociative)
    GE   error (nonassociative)

    $default  reduce using rule 21 (exp)


State 61

   13 exp: exp . TIMES exp
   14    | exp . DIVIDE exp
   15    | exp . PLUS exp
   16    | exp . MINUS exp
   17    | exp . EQ exp
   18    | exp . NEQ exp
   19    | exp . LT exp
   20    | exp . LE exp
   21    | exp . GT exp
   22    | exp . GE exp
   22    | exp GE exp .
   23    | exp . AND exp
   24    | exp . OR exp

    PLUS    shift, and go to state 27
    MINUS   shift, and go to state 28
    TIMES   shift, and go to state 29
    DIVIDE  shift, and go to state 30
